# agate-ai-demo

./: .dockerignore  .gitignore  AGENTS.md  DEPLOY.md  LICENSE  Makefile  README.md
apps/agate-api/: DEPLOY.md  Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
apps/agate-api/src/api/: __init__.py  main.py  queue.py
apps/agate-api/src/api/routers/: __init__.py  flows.py  graphs.py  projects.py  runs.py
apps/agate-ui/: DEPLOY.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/agate-ui/scripts/: sync-nodes.js
apps/agate-ui/src/: App.tsx  index.css  vite-env.d.ts
apps/agate-ui/src/components/: Layout.tsx  NodePalette.tsx  NodePanel.tsx  ProjectCard.tsx  ProjectDialog.tsx  ProjectSettings.tsx  RunPanel.tsx  WelcomeScreen.tsx
apps/agate-ui/src/components/ui/: badge.tsx
apps/agate-ui/src/components/visualizations/: LeafletGeoMap.tsx
apps/agate-ui/src/lib/: api.ts  defaultProject.ts  nodeColors.ts  nodeUtils.tsx  statusBadgeStyles.ts  utils.ts  visualizations.tsx
apps/agate-ui/src/nodes/: nodeMetadataRegistry.ts  registry.ts
apps/agate-ui/src/nodes/embed/: NodeComponent.tsx  PanelComponent.tsx
apps/agate-ui/src/nodes/embed_images/: NodeComponent.tsx  (+1 more)
apps/agate-ui/src/pages/: GraphBuilder.tsx  Index.tsx  ProcessedItemDetail.tsx  RunDetail.tsx  RunGraph.tsx  RunsList.tsx
apps/worker/: DEPLOY.md  Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml
apps/worker/src/worker/: __init__.py  tasks.py
infra/: docker-compose.yml
infra/bootstrap/: 01-verify-bootstrap.sh
(+24 files in other folders)
