[project]
name = "agate-api"
version = "0.1.0"
description = "FastAPI control plane for Agate demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "agate-core",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
agate-core = { path = "../../packages/agate", editable = true }
