[project]
name = "agate-worker"
version = "0.1.0"
description = "Celery worker for Agate demo"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "agate-core",
    "langgraph>=0.2.0",
    "boto3>=1.34.0",
    "agate-utils",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.uv.sources]
agate-utils = { path = "../../packages/utils", editable = true }
agate-core = { path = "../../packages/agate", editable = true }
